syntax = "proto3";

package category;

option go_package = "./grpc;category";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CategoryHandler {
  rpc GetByID(GetByIDRequest) returns (Category) {}
  rpc Create(Category) returns (google.protobuf.Empty) {}
  rpc Update(UpdateCategoryRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteCategoryRequest) returns (google.protobuf.Empty) {}
  rpc ListAll(google.protobuf.Empty) returns (ListCategoriesResponse) {}
}

message Category {
  uint32 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message GetByIDRequest {
  uint32 id = 1;
}

message UpdateCategoryRequest {
  uint32 id = 1;
  Category category = 2;
}

message DeleteCategoryRequest {
  uint32 id = 1;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
}
